--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
       <h1>Angular Bookstore</h1>
       <h2>Test Ionic Framework Bookstore</h2>
     </header>
-    <article ng-controller="StoreController as store">
-      <h2>{{store.product.name}}</h1>
-      <h3>${{store.product.price}}</h2>
-      <p>{{store.product.description}}</p>
-    </article>
+    <section ng-controller="StoreController as store">
+      <article ng-repeat="product in store.products">
+        <h2>{{product.name}}</h1>
+        <h3>${{product.price}}</h2>
+        <p>{{product.description}}</p>
+        <button ng-show="product.canPurchase">Add to cart</button>
+      </article>
+    </section>
     <footer>
       <p>Made by Yesid Ghisays</p>
       <p>@yeso126</p>
